--- a/fmail/packages.config
+++ b/fmail/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle.Cryptography" version="2.3.0" targetFramework="net48" />
+  <package id="HtmlAgilityPack" version="1.11.61" targetFramework="net48" />
   <package id="MailKit" version="4.4.0" targetFramework="net48" />
   <package id="MimeKit" version="4.4.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
